# islpy-barvinok

./: LICENSE  README.md  build_backend.py  config.sh  pyproject.toml
.github/workflows/: build-publish.yml  tag_on_merge.yml  track_upstream.yml  wheels.yml
scripts/: build_all.sh
