[project]
name = "islpy-barvinok"
version = "2025.2.5.post1"
description = "islpy built with Barvinok and vendored native libs (Linux/macOS). Falls back to source build if wheel unavailable."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Cambridge Yang" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
]

[project.urls]
Homepage = "https://github.com/thisiscam/islpy-barvinok"

[build-system]
requires = [
  "setuptools>=68",
  "wheel",
  # Needed by scripts/build_all.sh and upstream islpy build
  "build",
  "cmake>=3.22",
  "ninja",
  "scikit-build-core>=0.9",
  # Optional: wheel repair on macOS during build (ignored if unavailable)
  "delocate>=0.13.0; platform_system == 'Darwin'",
]
build-backend = "build_backend"
backend-path = ["."]

# Notes:
# - CI publishes prebuilt wheels for common platforms. If a wheel is unavailable,
#   a PEP 517 from-source build is supported via the custom backend that runs
#   scripts/build_all.sh.
# - Wheels are produced via CI using scripts in scripts/ and cibuildwheel.

[tool.cibuildwheel]
build = [
  "cp310-*",
  "cp311-*",
  "cp312-*",
  "cp313-*",
]
skip = [
  "*musllinux*",
  "*win*",
]
test-command = "python -c \"import islpy, sys; print('ok', sys.version)\""

[tool.cibuildwheel.macos]

[tool.cibuildwheel.linux]

